deployment/kubectl/latex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: latex-compiler
spec:
  selector:
    matchLabels:
      app: latex
  replicas: 1
  template:

    # This is the pod configuration
    metadata:
      labels:
        app: latex
    
    spec:
      volumes:
      - name: working
        emptyDir: {}

      containers:
        # This is the main flask application container
        - name: latex
          image: matthewjarvis/latex-compileservice:latest
          volumeMounts:
          - name: working
            mountPath: /working
          ports:
            - containerPort: 5000

        - name: worker
          image: matthewjarvis/latex-compileservice:latest
          volumeMounts:
          - name: working
            mountPath: /working
        - name: beat
          image: matthewjarvis/latex-compileservice:latest
        - name: redis
          image: redis:5
