deployment/kubectl/latex-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: latex-ingress
spec:
  rules:
  - host: latex.example.com # CHANGE TO YOUR FQDN
    http:
      paths:
      - backend: 
          serviceName: latex-internal-service
          servicePort: 80
